Fix flex-wrap + correction orth page d'accueil

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -43,7 +43,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 33%;
+        min-width: 33%;
         .circle{
           height: 80px;
           width: 80px;
